[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Towers/ProjectileSpell.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="ProjectileSpell" type="Node2D"]
script = ExtResource( 1 )

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="TargetingArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetingArea"]
shape = SubResource( 1 )

[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
[connection signal="body_entered" from="TargetingArea" to="." method="_on_TargetingArea_body_entered"]
[connection signal="body_exited" from="TargetingArea" to="." method="_on_TargetingArea_body_exited"]
